Fixed project image being wrong height on re-open, fixed scrolling on #main

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,9 @@ html, body {
 body {
   background-color: var(--darkestblue);
 }
+#main {
+  overflow: hidden;
+}
 button:focus {
   outline:0;
 }
